<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_text">Поиск</string>
    <string name="library_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">Ссылка на курс по Андроид-разработке в Практикуме: https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search">Поиск</string>
    <string name="support_email">your_email@example.com</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте ваше подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="player_error_loading_preview">Ошибка загрузки аудиофайла</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="description">back</string>
    <string name="album_track">Альбом песни</string>
    <string name="year_song">Год песни</string>
    <string name="genre_song">Жанр песни</string>
    <string name="country_song">Страна</string>
    <string name="counrtytag">counrtyTag</string>
    <string name="start">00:00</string>
    <string name="likedTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="mediatekaIsEmpty">Ваша медиатека пуста</string>
    <string name="noPlaylists">Вы не создали\nни одного плейлиста</string>
    <string name="addNewPlaylist">Новый плейлист</string>
    <string name="practicum_offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="playlistName">Название*</string>
    <string name="playlistDescription">Описание</string>
    <string name="create">Создать</string>
    <string name="finishPlaylistCreating">Завершить создание плейлиста?</string>
    <string name="dataWillLost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="cancel_no">Нет</string>
    <string name="complete">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_created_notify">Плейлист %1$s создан</string>
    <string name="delete_playlist_warning">Все треки в плейлисте останутся в медиатеке</string>
    <string name="remove_track_from_playlist">Удалить трек из плейлиста?</string>
    <string name="remove_track_from_playlist_warning">Трек останется в медиатеке</string>
    <string name="empty_playlist">Этот плейлист пока пуст</string>
    <string name="track_removed">Трек удалён</string>
    <string name="track_added">Трек добавлен</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="playlist_updated">Плейлист обновлён</string>
    <string name="playlist_deleted">Плейлист удалён</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_question">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_question">Хотите удалить трек?</string>
    <string name="delete">Да</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="no_tracks_in_playlist_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="share_playlist_menu">Поделиться</string>
    <string name="edit_playlist_info">Редактировать</string>
    <string name="save_changes">Сохранить</string>

    <plurals name="playlist_tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>
