<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:padding="@dimen/padding_standard"
    android:background="@color/blue_sky">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/padding_standard"/>

    <FrameLayout style="@style/FrameLayoutStyle">

        <Button android:id="@+id/button_search"
            style="@style/ButtonStyle"
            android:text="@string/search_text"
            app:icon="@drawable/search"
            app:iconGravity="textStart"/>

    </FrameLayout>

    <FrameLayout style="@style/FrameLayoutStyle">

        <Button android:id="@+id/button_library"
            style="@style/ButtonStyle"
            android:text="@string/library_text"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"/>

    </FrameLayout>

    <FrameLayout style="@style/FrameLayoutStyle">

        <Button android:id="@+id/button_settings"
            style="@style/ButtonStyle"
            android:text="@string/settings_text"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"/>

    </FrameLayout>

</GridLayout>
