<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="@dimen/padding_standard">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:padding="0dp"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_width="374dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back_button"
                style="@style/BackButtonStyle"
                android:adjustViewBounds="true"
                android:src="@drawable/settings_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/action_bar_title"
                android:layout_marginStart="@dimen/margin_standard"
                android:text="@string/settings_text"
                style="@style/header_page"
                />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:orientation="vertical"
            android:padding="0dp"
            tools:ignore="UselessParent">

            <LinearLayout style="@style/SettingsLinearLayoutStyle">

                <TextView
                    android:id="@+id/tvDarkTheme"
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/dark_theme" />

                <Switch
                    android:id="@+id/switchDarkTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:thumbTint="@drawable/switch_thumb"
                    android:trackTint="@drawable/switch_track"
                    tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsLinearLayoutStyle"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvShareApp"
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/share_app"
                    />

                <ImageView
                    android:id="@+id/iv_share_app"
                    style="@style/SettingsImageViewStyle"
                    android:src="@drawable/share"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsLinearLayoutStyle"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvSupport"
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/support" />

                <ImageView
                    android:id="@+id/ivSupport"
                    style="@style/SettingsImageViewStyle"
                    android:src="@drawable/support"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsLinearLayoutStyle"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvUserAgreement"
                    style="@style/SettingsTextViewStyle"
                    android:text="@string/user_agreement" />

                <ImageView
                    android:id="@+id/ivUserAgreement"
                    style="@style/SettingsImageViewStyle"
                    android:src="@drawable/info_user"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</GridLayout>
