<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsBackgroundColorStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.medialib.LibraryFragment">


    <TextView
        android:id="@+id/mediatekaTitle"
        style="@style/MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding4"
        android:paddingStart="@dimen/padding12"
        android:paddingTop="10dp"
        android:paddingEnd="84dp"
        android:paddingBottom="@dimen/padding12"
        android:text="@string/library_text"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.tabs.TabLayout
        android:id = "@+id/tabLayout"
        style="@style/tabLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediatekaTitle"
        app:tabMode="fixed"
        app:tabIndicatorHeight="@dimen/size_2dp"
        app:tabTextAppearance="@style/MineCustomTabText"
        android:layout_marginStart="@dimen/button_radius"
        android:layout_marginEnd="@dimen/button_radius"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likedTracks"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mediatekaViewPager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>