<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".presentation.player.PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/transparent"
            android:contentDescription="@string/description"
            android:src="@drawable/settings_back"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/leftBorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="24dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/rightBorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="24dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/leftBorderBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/rightBorderBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/textsBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_tags="durationTag, albumTag, yearTag, genreTag, countryTag" />

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="24dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/description"
                    app:layout_constraintBottom_toTopOf="@id/title"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                    app:layout_constraintStart_toEndOf="@+id/leftBorder"
                    app:layout_constraintTag="imageViewTag"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/placeholder_max" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:textColor="?attr/colorOnPrimary"
                    android:textFontWeight="400"
                    android:textSize="22sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/author"
                    app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                    app:layout_constraintStart_toStartOf="@id/leftBorder"
                    tools:text="Song Name" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:textColor="?attr/colorOnPrimary"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/buttonPlay"
                    app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                    app:layout_constraintStart_toStartOf="@id/leftBorder"
                    tools:text="Author" />

                <ImageButton
                    android:id="@+id/addToPlaylist"
                    android:layout_width="51dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="54dp"
                    android:layout_marginBottom="75dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/gray"
                    android:contentDescription="@string/description"
                    android:src="@drawable/add_to_playlist"
                    app:layout_constraintBottom_toTopOf="@id/duration"
                    app:layout_constraintEnd_toStartOf="@id/buttonPlay"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@id/leftBorder" />

                <ImageButton
                    android:id="@+id/buttonPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:layout_marginBottom="59dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/description"
                    android:src="@drawable/button_play"
                    app:layout_constraintBottom_toTopOf="@id/duration"
                    app:layout_constraintEnd_toStartOf="@id/addToLikes"
                    app:layout_constraintStart_toEndOf="@id/addToPlaylist" />

                <ImageButton
                    android:id="@+id/addToLikes"
                    android:layout_width="51dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="54dp"
                    android:layout_marginBottom="75dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/gray"
                    android:contentDescription="@string/description"
                    android:src="@drawable/like_button_active"
                    app:layout_constraintBottom_toTopOf="@id/durationSong"
                    app:layout_constraintEnd_toStartOf="@id/rightBorder"
                    app:layout_constraintStart_toEndOf="@id/buttonPlay" />

                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:textColor="?attr/colorOnPrimary"
                    android:textFontWeight="500"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/rightBorder"
                    app:layout_constraintStart_toEndOf="@id/leftBorder"
                    app:layout_constraintTop_toBottomOf="@id/buttonPlay"
                    tools:text="00:00" />

                <TextView
                    android:id="@+id/durationSong"
                    style="@style/TextOnPlayerRight"
                    app:layout_constraintBottom_toTopOf="@id/albumSong"
                    app:layout_constraintEnd_toStartOf="@id/rightBorderBottom"
                    app:layout_constraintStart_toEndOf="@id/textsBarrier"
                    tools:text="00:00" />

                <TextView
                    android:id="@+id/albumSong"
                    style="@style/TextOnPlayerRight"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintBottom_toTopOf="@id/yearSong"
                    app:layout_constraintEnd_toStartOf="@id/rightBorderBottom"
                    app:layout_constraintStart_toEndOf="@id/textsBarrier"
                    tools:text="@string/album_track" />

                <TextView
                    android:id="@+id/yearSong"
                    style="@style/TextOnPlayerRight"
                    app:layout_constraintBottom_toTopOf="@id/genreSong"
                    app:layout_constraintEnd_toStartOf="@id/rightBorderBottom"
                    app:layout_constraintStart_toEndOf="@id/textsBarrier"
                    tools:text="@string/year_song" />

                <TextView
                    android:id="@+id/genreSong"
                    style="@style/TextOnPlayerRight"
                    app:layout_constraintBottom_toTopOf="@id/countrySong"
                    app:layout_constraintEnd_toStartOf="@id/rightBorderBottom"
                    app:layout_constraintStart_toEndOf="@id/textsBarrier"
                    tools:text="@string/genre_song" />

                <TextView
                    android:id="@+id/countrySong"
                    style="@style/TextOnPlayerRight"
                    android:layout_marginBottom="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/rightBorderBottom"
                    app:layout_constraintStart_toEndOf="@id/textsBarrier"
                    tools:text="@string/country_song" />

                <TextView
                    android:id="@+id/duration"
                    style="@style/TextOnPlayerLeft"
                    android:text="@string/duration"
                    android:tag="durationTag"
                    app:layout_constraintBottom_toTopOf="@id/album"
                    app:layout_constraintStart_toStartOf="@id/leftBorderBottom" />

                <TextView
                    android:id="@+id/album"
                    style="@style/TextOnPlayerLeft"
                    android:text="@string/album"
                    android:tag="albumTag"
                    app:layout_constraintBottom_toTopOf="@id/year"
                    app:layout_constraintStart_toStartOf="@id/leftBorderBottom" />

                <TextView
                    android:id="@+id/year"
                    style="@style/TextOnPlayerLeft"
                    android:text="@string/year"
                    android:tag="yearTag"
                    app:layout_constraintBottom_toTopOf="@id/genre"
                    app:layout_constraintStart_toStartOf="@id/leftBorderBottom" />

                <TextView
                    android:id="@+id/genre"
                    style="@style/TextOnPlayerLeft"
                    android:text="@string/genre"
                    android:tag="genreTag"
                    app:layout_constraintBottom_toTopOf="@id/country"
                    app:layout_constraintStart_toStartOf="@id/leftBorderBottom" />

                <TextView
                    android:id="@+id/country"
                    style="@style/TextOnPlayerLeft"
                    android:layout_marginBottom="28dp"
                    android:text="@string/country"
                    android:tag="@string/counrtytag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/leftBorderBottom" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet_player"
        style="@style/BottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_bottom_sheet"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_radius"
            android:background="@drawable/rounded_view"
            style="@style/BottomSheetViewStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding12"
            android:gravity="center"
            android:paddingTop="@dimen/button_radius"
            android:paddingBottom="@dimen/padding12"
            android:text="@string/add_in_playlist"
            android:textSize="19sp"
            android:textStyle="bold"
            style="@style/BottomSheetTitleStyle"
            />

        <Button
            android:id="@+id/addNewPlaylistPlayer"
            style="@style/ResetButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_radius"
            android:text="@string/newPlaylist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistRecyclerBSPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size24" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
