<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".presentation.medialib.CreatePlaylistFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingsBackgroundColorStyle">

        <ImageView
            android:id="@+id/backFromCreatePlaylist"
            style="@style/BackButtonSettingsStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/padding4"
            android:layout_marginTop="@dimen/padding4"
            android:contentDescription="@string/description"
            android:scaleType="centerInside"
            android:src="@drawable/settings_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/title"
            style="@style/header_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/newPlaylist"
            app:layout_constraintBottom_toBottomOf="@id/backFromCreatePlaylist"
            app:layout_constraintStart_toEndOf="@id/backFromCreatePlaylist"
            app:layout_constraintTop_toTopOf="@id/backFromCreatePlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/addPlaylistImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/size24"
            android:layout_marginTop="@dimen/size24"
            android:background="@drawable/rounded_gapped_rectangle"
            android:scaleType="centerInside"
            android:src="@drawable/playlist_placeholder"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backFromCreatePlaylist" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addPlaylistName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/corner_radius"
            android:layout_marginTop="@dimen/size32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPlaylistImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNamePlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_radius"
            android:layout_marginTop="@dimen/button_radius"
            android:hint="@string/playlistName"
            android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addPlaylistDescription"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/corner_radius"
            android:layout_marginTop="@dimen/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPlaylistName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescriptionPlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/button_radius"
                android:layout_marginTop="@dimen/button_radius"
                android:hint="@string/playlistDescription"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createPlaylistButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/corner_radius"
            android:layout_marginTop="@dimen/size24"
            android:layout_marginBottom="@dimen/size32"
            android:background="@drawable/tap_button_selector"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/addPlaylistDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
